<?xml version="1.0"?>
<package format="2">
  <name>olei_msgs</name>
  <version>1.5.2</version>
  <description>
    ROS message definitions for Olei 2D LIDARs.
  </description>
  <maintainer email="yongli_zhang@ole-systems.com">ZYL</maintainer>
  <author>ZYL</author>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/olei_msgs</url>
  <url type="repository">https://github.com/ros-drivers/olei</url>
  <url type="bugtracker">https://github.com/ros-drivers/olei/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
