<?xml version="1.0"?>
<package format="2">
  <name>olei_msgs</name>
  <version>1.5.2</version>
  <description>
    ROS message definitions for olei 2D LIDARs.
  </description>
  <maintainer email="emanuele.montemurro@olei.com">Emanuele</maintainer>
  <author>Emanuele</author>
  <license>BSD</license>

  <url type="website">TODO</url>
  <url type="repository">TODO</url>
  <url type="bugtracker">TODO</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
