<package format="2">

  <name>olelidar</name>
  <version>3.0.0</version>
  <description>
    Basic ROS support for the olei 2D LIDARs.
  </description>
  <maintainer email="emanuele.montemurro@olei.com">Emanuele</maintainer>
  <author>Emanuele</author>
  <license>GNU General Public License V3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>olei_msgs</depend>

  <depend>roscpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>


  <export>
    <!--<nodelet plugin="${prefix}/nodelet_plugins.xml"/>-->
  </export>

</package>
